samples/_failures_safe/1761145003_a38a32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7ac12d6e.c: In function ‘next_token’:
./samples/SAFE/__tmp_7ac12d6e.c:179:24: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  179 |     char c = peek_char(lex
      |                        ^~~
      |                        lexer
./samples/SAFE/__tmp_7ac12d6e.c:179:24: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7ac12d6e.c:179:27: error: expected ‘)’ at end of input
  179 |     char c = peek_char(lex
      |                       ~   ^
      |                           )
./samples/SAFE/__tmp_7ac12d6e.c:179:5: error: expected declaration or statement at end of input
  179 |     char c = peek_char(lex
      |     ^~~~
